[package]
name = "ts-analyze-binder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
url = "2.5"
libltntstools-sys = {path = "/storage/dev/ltntstools-build-environment/libltntstools/rust/libltntstools-sys"}

